[gd_scene load_steps=2 format=3 uid="uid://dnhyb6von10hj"]

[ext_resource type="Script" uid="uid://g2tr48eb4jq1" path="res://scenes/widgets/icon_selector/icon_selector.gd" id="1_bybvs"]

[node name="IconSelector" type="PanelContainer" node_paths=PackedStringArray("icon_rect", "file_dialog")]
offset_right = 90.0
offset_bottom = 90.0
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_bybvs")
icon_rect = NodePath("MarginContainer/IconRect")
file_dialog = NodePath("FileDialog")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="IconRect" type="TextureButton" parent="MarginContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
ignore_texture_size = true
stretch_mode = 5

[node name="FileDialog" type="FileDialog" parent="."]
title = "Select an Icon"
initial_position = 2
ok_button_text = "Open"
mode_overrides_title = false
file_mode = 0
access = 2
filters = PackedStringArray("*.png,*.jpg,*.jpeg;image/png,image/jpeg")
use_native_dialog = true

[connection signal="pressed" from="MarginContainer/IconRect" to="." method="_on_icon_rect_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
